--- a/css/main.css
+++ b/css/main.css
@@ -185,10 +185,11 @@ aside {
 
 .form-description h3 {
   padding: 20px 0;
+  margin: 0%;
 }
 
 .form-description p {
-  padding: 30px 0;
+  padding: 0 55px 30px 0;
 }
 
 .form {
@@ -197,7 +198,28 @@ aside {
 
 .form h3 {
    padding:20px 0;
+   margin: 0%;
 }
+
+.form input {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  flex-flow: row wrap;
+  width: 85%;
+}
+
+input[type="text"] {
+  margin: 0 0 20px 0;
+  padding: 1em;
+  width: 76%;
+}
+
+input[type="button"] {
+  margin: 20px 0 0 0;
+  padding: 20px;
+}
+
 
 
 /*----- features ----*/
@@ -265,14 +287,21 @@ aside {
   margin: 20px 25px;
 }
 
-.contact {
+.contact-about {
   margin: 20px 25px;
 }
 
-.contact-content {
-  margin: 20px 25px;
+.footer-content h4 {
+  padding: 0 45px;
 }
 
+ /* ==========================================================================
+                          FAQ PAGE Mobile Styles
+   ========================================================================== */
+
+   .content-wrapper {
+    padding: 0 5%;
+  }
 
 
 
@@ -378,7 +407,7 @@ aside {
     flex-flow: nowrap;
     padding: 33px 0;
   }
-/*
+
   header nav ul {
     justify-content: space-between;
     width: 31%;
@@ -449,9 +478,9 @@ aside {
     margin: 100px 0;
   }
 */
-  .contact {
-    margin: 0px;
-  }
+ 
+
+
 /*
   footer .copyright {
     display: flex;
@@ -459,6 +488,8 @@ aside {
     align-items: center;
     width: 100%;
   }
+  */
+
 
 
  /* ==========================================================================
@@ -468,13 +499,11 @@ aside {
 /*.mission {
   padding-left: 10%;
   margin: 20px 0px;
-}
+}*/
 
 .mission .content-wrapper {
-  display: flex;
-  justify-content: center;
-  flex-flow: nowrap;
-}*/
+  margin-left: 40px;
+}
 
 .mission  {
   display: flex;
@@ -489,17 +518,29 @@ aside {
   padding: 20px 0px;
 }
 
-/*.mission-content p {
+.mission-content p {
   width: 42%;
-  padding: 8px 31px 0px 7px;
 }
-*/
+
 .contact-about {
-  margin: 1px 1px;
   display: flex;
   justify-content: center;
   flex-flow: nowrap;
 }
+
+.contact-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px 0px;
+  margin: 0%;
+}
+
+.contact-content p {
+  width: 50%;
+  padding-right: 40px;
+}
+
 /*
 .contact .content-wrapper h2 {
   width: 80%;
@@ -513,6 +554,7 @@ aside {
   align-items: flex-start;
   padding: 20px 0px;
   margin: 0;
+}
 
   /* display: flex;
   justify-content: space-evenly;
@@ -523,6 +565,7 @@ aside {
 }
 
 } */
+}
 
 
 @media only screen and (min-width: 1200px) {
@@ -533,7 +576,7 @@ aside {
     margin: 40px 0;
   }
 
-  header{
+  header {
     justify-content: center;
     padding: 15px 0;
   }
@@ -595,6 +638,7 @@ aside {
     width: 100%;
     margin: 50px 0;
   }
+}
 
 
 
