--- a/css/main.css
+++ b/css/main.css
@@ -257,8 +257,8 @@ input[type="button"] {
 
 .reviews {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  
+  
   padding: 50px 0;
 }
 
@@ -477,18 +477,8 @@ input[type="button"] {
     width: 100%;
     margin: 100px 0;
   }
-*/
+}
  
-
-
-/*
-  footer .copyright {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-  }
-  */
 
 
 
@@ -496,10 +486,6 @@ input[type="button"] {
                           ABOUT PAGE Tablet
    ========================================================================== */
 
-/*.mission {
-  padding-left: 10%;
-  margin: 20px 0px;
-}*/
 
 .mission .content-wrapper {
   margin-left: 40px;
@@ -541,13 +527,6 @@ input[type="button"] {
   padding-right: 40px;
 }
 
-/*
-.contact .content-wrapper h2 {
-  width: 80%;
-  padding-left: 11%;
-}*/
-
-
 .contact-content {
   display: flex;
   justify-content: space-between;
@@ -556,17 +535,9 @@ input[type="button"] {
   margin: 0;
 }
 
-  /* display: flex;
-  justify-content: space-evenly;
-  padding-left: 72px;
-  padding-right: 103px;
-  align-items: center;
-  width: 73%;
-}
-
-} */
-}
-
+/* ==========================================================================
+                          DESKTOP QUERIES
+   ========================================================================== */
 
 @media only screen and (min-width: 1200px) {
   /* Desktop styles here */
@@ -637,6 +608,22 @@ input[type="button"] {
     align-items: center;
     width: 100%;
     margin: 50px 0;
+  }
+
+  /* ==========================================================================
+                          FAQ PAGE
+   ========================================================================== */
+  
+
+  .faq-content-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin: 6%;
+    width: 960px;
+  }
+
+  .faq-content {
+    padding: 8px 8px;
   }
 }
 
