--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,54 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+
+/* -----General Styles------- */
+
+html {
+  font-size: 16px;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+}
+
+ul,
+ol {
+  
+}
+
+a {
+  color: #e2e3ed;
+  text-decoration: none;
+}
+
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 2.25em;
+}
+
+h3,
+h4 {
+  font-size: 1.25em;
+}
+
+p {
+  
+}
+
+img {
+
+}
+
+figure {
+
+}
+
+address {
+
+}
+
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
