--- a/css/main.css
+++ b/css/main.css
@@ -112,8 +112,9 @@ a {
 
 h1 {
   font-size: 2.25em;
-  line-height: 2.688em;
+  line-height: 1.5em;
   font-weight: 500;
+  font-family: 'Poppins', sans-serif;
 }
 
 h2 {
@@ -198,6 +199,7 @@ header nav ul {
 
 footer p {
   margin: 0;
+  text-align: center;
 }
 
 footer .content-wrapper {
@@ -273,17 +275,26 @@ aside {
 input[type="text"] {
   margin: 0 0 20px 0;
   padding: 1em;
-  width: 76%;
   font-size: 1.125em;
   font-weight: 500;
   color: #2a423a;
+  box-sizing: border-box;
+  width: 100%;
+  font-style: italic;
 }
 
 input[type="button"] {
-  margin: 20px 0 0 0;
-  padding: 20px;
   background-color: #2a423a;
   color: #e2e3ed;
+  width: 100%;
+  padding: 20px 0 20px 15px;
+  margin-top: 20px;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 
@@ -317,6 +328,7 @@ input[type="button"] {
 .features-item-description {
   margin: 0;
   padding: 30px 0;
+  text-align: center;
 }
 
 /*---- Reviews -------*/
