--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,7 @@ ol {
 a {
   color: #e2e3ed;
   text-decoration: none;
+  padding: 0px 26px 0px 3px;
 }
 
 h1 {
@@ -115,6 +116,7 @@ h1 {
   line-height: 1.5em;
   font-weight: 500;
   font-family: 'Poppins', sans-serif;
+  color: #e2e3ed;
 }
 
 h2 {
@@ -135,11 +137,11 @@ p {
 }
 
 img {
-
+  width: 100%;
 }
 
 figure {
-
+  margin: 0%;
 }
 
 address {
@@ -195,6 +197,13 @@ header nav ul {
   width: 57%;
   margin: 0;
   list-style: none;
+  font-weight: 500;
+  font-size: 1.125em;
+  text-transform: uppercase;
+}
+
+header figure {
+  width: 60%;
 }
 
 footer p {
@@ -229,6 +238,8 @@ footer .contact {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: url('../img/retreat.jpg') center no-repeat #333;
+  background-size: cover;
 }
 
 /*-- Aside ----*/
@@ -252,7 +263,7 @@ aside {
 }
 
 .form-description p {
-  padding: 0 55px 30px 0;
+  padding: 0 27px 8px 0;;
 }
 
 .form {
@@ -305,10 +316,13 @@ input[type="button"] {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: url('../img/retreat-features.jpg') center no-repeat #333;
+  background-size: cover;
 }
 
 .features h2 {
   margin-bottom: 60px;
+  color: #e2e3ed;
 }
 
 
@@ -329,19 +343,24 @@ input[type="button"] {
   margin: 0;
   padding: 30px 0;
   text-align: center;
+  color: #e2e3ed;
 }
 
 /*---- Reviews -------*/
 
 .reviews {
   display: flex;
-  
-  
-  padding: 50px 0;
+  justify-content: center;
+  align-items: baseline;
+  flex-flow: row wrap;
+  padding: 10px 0;
+  background-color: #2a423a;
+  color: #e2e3ed;
 }
 
 .reviews h2 {
-  margin-bottom: 40px;
+  margin-bottom: 50px;
+  color: #e2e3ed;
 }
 
 
@@ -349,11 +368,13 @@ input[type="button"] {
   width: 51%;
   margin: 0;
   padding: 20px 0;
+  color: #e2e3ed;
 }
 
 .reviews p {
   margin: 0;
   padding: 10px 0;
+  color: #e2e3ed;
 }
 
 
@@ -484,6 +505,10 @@ input[type="button"] {
 @media only screen and (min-width: 768px) {
   /* Tablet styles here */
 
+header figure {
+  width: 45%;
+}
+
 h1 {
   font-size: 3em;
   line-height: 3em;
@@ -543,7 +568,6 @@ faq-p {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
-    width: 81%;
   }
 
   .hero-area h1 {
@@ -698,6 +722,10 @@ faq-p {
 @media only screen and (min-width: 1200px) {
   /* Desktop styles here */
 
+  header figure {
+    width: 30%;
+  }
+
   .content-wrapper {
     width: 960px;
     margin: 40px 0;
@@ -721,7 +749,6 @@ faq-p {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
-    width: 78%;
   }
 
   aside .content-wrapper {
