--- a/css/main.css
+++ b/css/main.css
@@ -384,11 +384,33 @@ input[type="button"] {
    ========================================================================== */
 
 .mission {
-  margin: 20px 25px;
+  background-color: #527158;
+  color: #e2e3ed;
+  display: flex;
+  justify-content: center;
+}
+
+.map figure {
+  width: 100%;
+  height: 0;
+  padding-bottom: 125%;
+  overflow: hidden;
+  position: relative;
+}
+
+.map iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .contact-about {
-  margin: 20px 25px;
+  background-color: #2a423a;
+  color: #e2e3ed;
+  display: flex;
+  justify-content: center;
 }
 
 .footer-content h4 {
