--- a/css/main.css
+++ b/css/main.css
@@ -524,6 +524,13 @@ input[type="button"] {
    Modify as content requires.
    ========================================================================== */
 
+
+
+
+   /* ==========================================================================
+     ----******--------  TABLET STYLES HERE -----**********------
+   ========================================================================== */
+
 @media only screen and (min-width: 768px) {
   /* Tablet styles here */
 
@@ -676,6 +683,22 @@ faq-p {
   width: 42%;
 }
 
+.map figure {
+  width: 100%;
+  height: 0;
+  padding-bottom: 55%;
+  overflow: hidden;
+  position: relative;
+}
+
+.map iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .contact-about {
   display: flex;
   justify-content: center;
@@ -815,6 +838,28 @@ faq-p {
     margin: 50px 0;
   }
 
+
+  /* ==========================================================================
+                          ABOUT PAGE
+   ========================================================================== */
+  
+   .map figure {
+    width: 100%;
+    height: 0;
+    padding-bottom: 47%;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .map iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+
   /* ==========================================================================
                           FAQ PAGE
    ========================================================================== */
@@ -836,7 +881,8 @@ faq-p {
   .faq-content {
     padding: 8px 8px;
   }
-}
+
+
 
 
 
