--- a/css/main.css
+++ b/css/main.css
@@ -104,17 +104,19 @@ ul,
 ol {
   font-size: 1.125em;
   font-weight: bold;
+  list-style: none;
+  margin: 0%;
+  padding: 0%;
 }
 
 a {
   color: #e2e3ed;
   text-decoration: none;
-  padding: 0px 26px 0px 3px;
 }
 
 h1 {
   font-size: 2.25em;
-  line-height: 1.5em;
+  line-height: 1.2em;
   font-weight: 500;
   font-family: 'Poppins', sans-serif;
   color: #e2e3ed;
@@ -136,7 +138,7 @@ h4 {
 
 p {
   font-size: 0.875em;
-  line-height: 1.125em;
+  line-height: 1.258em;
 }
 
 img {
@@ -175,7 +177,12 @@ header .content-wrapper {
   margin:  0;
 }
 
+header figure {
+  width: 60%;
+}
+
 .header-divider {
+  background: #3a3a3a;
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
@@ -192,10 +199,8 @@ header nav {
 header nav ul {
   display: flex;
   justify-content: space-around;
-  width: 57%;
-  margin: 0;
-  list-style: none;
-  font-weight: 500;
+  width: 100%;
+  font-weight: 700;
   font-size: 1.125em;
   text-transform: uppercase;
 }
@@ -227,14 +232,13 @@ footer .contact {
 
 footer .social-icons {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: space-between;
+  width: 12.5em;
+  /*align-items: center;*/
 }
 
 footer .social-icons p {
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -262,6 +266,8 @@ footer .copyright {
   flex-flow: row wrap;
   background: url('../img/retreat.jpg') center no-repeat #333;
   background-size: cover;
+  background-position: center;
+  min-height: 500px;
 }
 
 /*-------- Aside --------*/
@@ -276,7 +282,7 @@ aside {
 }
 
 .form-description {
-  margin: 20px 0;
+  margin: 0;
 }
 
 .form-description h3 {
@@ -284,9 +290,6 @@ aside {
   margin: 0%;
 }
 
-.form-description p {
-  padding: 0 27px 8px 0;;
-}
 
 .form {
   margin: 20px 0;
@@ -337,9 +340,9 @@ input[type="button"] {
 .features {
   display: flex;
   justify-content: center;
-  flex-flow: row wrap;
   background: url('../img/retreat-features.jpg') center no-repeat #333;
   background-size: cover;
+  background-position: center;
 }
 
 .features h2 {
@@ -353,7 +356,7 @@ input[type="button"] {
   margin: 30px 0;
 }
 
-.feature-items {
+.features-items {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -454,16 +457,30 @@ input[type="button"] {
 
   .faq {
     background-color: #527158;
+    display: flex;
+    justify-content: center;
+  }
+
+  .faq h2 {
+    margin: 0 0 40px 0;
+    line-height: 1;
   }
    
   .faq-content-wrapper {
     width: 90%;
-    padding: 0 5%;
+    margin: 50px 0 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-flow: row wrap;
   }
 
-  .faq-header {
-    width: 90%;
-    padding: 0 5%;
+  .faq-content {
+    margin-bottom: 50px;
+  }
+
+  .faq-content h4 {
+    line-height: 1.333;
   }
   
 
@@ -573,8 +590,8 @@ input[type="button"] {
 
  /* General styles */
 .content-wrapper {
-width: 640px;
-margin: 100px 0;
+  width: 640px;
+  margin: 100px 0;
 }
 
 h1 {
@@ -585,6 +602,7 @@ h1 {
 h2 {
   font-size: 2.25em;
   line-height: 1.5em;
+  margin:0%
 }
 
 h3 {
@@ -598,14 +616,21 @@ p {
 }
 
 /* Header */
+header {
+  padding: 33px 0;
+}
+
 header figure {
-  width: 45%;
+  width: 30%;
 }
 
 header .content-wrapper {
-  justify-content: center;
+  justify-content: space-between;
   flex-flow: nowrap;
-  padding: 33px 0;
+}
+
+header nav {
+  justify-content: end;
 }
 
 header nav ul {
@@ -614,7 +639,7 @@ header nav ul {
 }
 
 .header-divider {
-  margin: 33px 0 0 0;
+ display: none;
 }
 
 /* Footer */
@@ -626,8 +651,6 @@ footer .content-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  width: 100%;
-  margin: 0;
 }
 
 footer h4 {
@@ -638,9 +661,8 @@ footer p {
   line-height: 1.125em;
 }
 
-footer .social-icons {
-  width: 12.5em;
-  justify-content: space-between;
+footer .contact {
+  margin: 0;
 }
 
 .faq h4,
@@ -733,7 +755,7 @@ aside .content-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 20px 0px;
+  padding: 20px 0px 0px 0px;
 }
 
 .mission-content p {
@@ -756,23 +778,28 @@ aside .content-wrapper {
   left: 0;
 }
 
-.contact-about {
-  display: flex;
-  justify-content: center;
-  flex-flow: nowrap;
+.contact-about h2 {
+  width: 80%;
+  margin: 0%;
 }
 
 .contact-content {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 20px 0px;
+  /*padding: 20px 0px;*/
   margin: 0%;
+}
+
+.contact-content h4 {
+  font-size: 1.5em;
+  margin: 20px 0%;
 }
 
 .contact-content p {
   width: 50%;
   padding-right: 40px;
+  margin: 0%;
 }
 
 
@@ -780,29 +807,22 @@ aside .content-wrapper {
                           FAQ PAGE Tablet Styles
    ========================================================================== */
 
-  .faq-header {
-    width: 640px;
-    padding: 0 10%;
-  }
-  
-   .faq-content-wrapper {
-    width: 640px;
-    padding: 13px 10%;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-flow: row wrap;
-  }
+.faq-content-wrapper {
+ justify-content: space-between;
+ width: 640px;
+}
 
-  .faq-content {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    flex-flow: column;
-    width: 45%;
-    padding: 18px 10px;
-    margin: 30px 5px;
-  }
+.faq-content {
+  width: 45%;
+}
+
+.faq h2 {
+  width: 100%;
+}
+
+.faq p {
+ line-height: 1.125em;
+ font-size: .875em;
 }
   
 
@@ -817,13 +837,32 @@ aside .content-wrapper {
 @media only screen and (min-width: 1200px) {
   /* Desktop styles here */
 
+  /* -----HEADER & FOOTER------*/
+  header {
+    padding: 15px 0;
+  }
+
   header figure {
     width: 30%;
   }
 
   .content-wrapper {
     width: 960px;
-    margin: 40px 0;
+    margin: 100px 0;
+  }
+
+  h2 {
+    font-size: 2.25em;
+  }
+
+  h3,
+  h4 {
+    font-size: 1.875em;
+  }
+
+  p {
+    font-size: 1.125em;
+    line-height: 1.333;
   }
 
   header {
@@ -832,7 +871,7 @@ aside .content-wrapper {
   }
 
   header .content-wrapper {
-    justify-content: center;
+    justify-content: space-between;
   }
 
   header nav ul {
@@ -840,6 +879,20 @@ aside .content-wrapper {
     width: 22%;
   }
 
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+
+  footer h4 {
+    font-size: 1.875em;
+  }
+
+
+
+/*------HOMEPAGE-----*/
   .hero-area {
     display: flex;
     justify-content: center;
@@ -880,13 +933,6 @@ aside .content-wrapper {
     justify-content: flex-end;
   }
 
-  .footer-content {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    margin: 50px 0;
-  }
 
 
   /* ==========================================================================
@@ -909,27 +955,42 @@ aside .content-wrapper {
     left: 0;
   }
 
+  .mission .content-wrapper h2 {
+    width: 95%;
+    font-size: 3em;
+  }
+
+  .contact-about h2 {
+    width: 95%;
+    font-size: 3em;
+  }
+
+  
 
   /* ==========================================================================
                           FAQ PAGE
    ========================================================================== */
-  
-
-   .faq-header {
-    width: 960px;
-    padding: 0 14px;
-    margin: 0 16%;
-  }
 
   .faq-content-wrapper {
     display: flex;
     justify-content: space-between;
-    margin: 6%;
+    margin: 6% 6% 0 6%;
     width: 960px;
+  }
+
+  .faq h2 {
+    width: 100%;
+    font-size: 3em;
   }
 
   .faq-content {
     padding: 8px 8px;
+  }
+
+  .faq h4,
+  .faq p {
+    font-size: 1.125em;
+    line-height: 1;
   }
 
 
